# Discord_Bot_Relay

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  websocket_server.rs
static/: index.html
